<resources>
    <string name="app_name">ATM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="Settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="amount">amount</string>
    <string name="add">ADD</string>
</resources>
